--- a/index.html
+++ b/index.html
@@ -1,88 +1,56 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bob Sodikkhujaev Python Portfolio</title>
-  <link rel="stylesheet" href="assets/css/style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet"></head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Name - Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
-    <!-- If you feel confident, you can try putting your image in here. -->
-  <!-- <img class="profile-image " src="assets/images/1654699612942.jfif" alt="profile picture"> -->
-   <h1>Bob Sodikkhujaev's Python Portfolio</h1> <!-- Put your name here -->
-  <div>
-   <!-- Put a paragraph about yourself here. It doesn't have to be super long. --> 
-   <p>This portfolio is focuses on my own Python development as a developer. Here you will find projects targeting software engineering principles.</p>
-  <p> My portfolio which focuses more on Data Science can be found here: <a href="https://BOBur3k.github.io/">Bob's Data Science github.io</a> </p>
- </div>
-  <p>Topics covered thus far are:</p>
-
-</div>
-<p>Topics covered thus far are:</p>
-
-<div class="table">
-  <table>
-    <thead>
-      <tr>
-        <th>Topic Category</th>
-        <th>Covered Topics</th>
-      </tr>
-    </thead>
-    <tbody>
-      <!-- Replace with your own list of concepts and topics  -->
-      <tr>
-          <!-- remove the a href and </a> tags, leave only the <td></td> with the text in the middle being what you want -->
-        <td><a href="introductory_python">Introduction to Python</a></td>
-        <td>Fundamental python concept, for loops, if statements</td>
-      </tr>
-      <tr>
-        <td><a href="oop_gui">OOP and GUI</a></td>
-        <td>OOP programming, GUI, TKinter, Turtle</td>
-      </tr>
-      <tr>
-        <td><a href="apis_intermediate_python">APIs and Intermediate Python</a></td>
-        <td>APIs, Exception raising, JSON, Twilio, SMTP</td>
-      </tr>
-      <tr>
-        <td><a href="frontend_dev">Front-end Web Development in Python</a></td>
-        <td>BeautifulSoup, Selenium, front-end development, Spotify API</td>
-      </tr>
-      <tr>
-        <td><a href="backend_dev">Back-end Web Development in Python</a></td>
-        <td>Deployment with Flask, using Bootstrap, SQLite database, REST API development</td>
-      </tr>
-      <tr>
-        <td><a href="data_science">Data Science Toolkit in Python</a></td>
-        <td>Data manipulation with Pandas and Numpy, visualization with Matplotlib, Plotly, and Seaborn, Regression with sklearn</td>
-      </tr>
-      <tr>
-        <td><a href="final_portfolio">Final Portfolio Projects</a></td>
-        <td>Multiple Python portfolio projects made from scratch to showcase various skills</td>
-      </tr>
-    </tbody>
-  </table>
-
-
-    <hr>
-        <div class="contact-me">
-          <h2>Get In Touch</h2>
-          <h3>Contact me below.</h3>
-          <p>You can find me via email and I will respond within 24-48 hours or reach out to me on social media for a faster response!</p>
-          <!-- Replace with your own email, test to see if the button works -->
-          <a class="btn" href="bsodikkhujaev@gmail.com">CONTACT ME</a>
+    <header>
+        <div class="nav-container">
+            <nav>
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
         </div>
-      </div>
-      
-      <!-- Replace with your own links -->
-      <div class="bottom-container">
-        <a class="footer-link" href="https://www.linkedin.com/in/bsodikkhujaev/" target="_blank">LinkedIn</a>
-        <a class="footer-link" href="https://github.com/BOBur3k" target="_blank">GitHub</a>
-        <p class="copyright">© 2023 Bob S.</p>
-      </div>
-  </div>
+        <div class="hero">
+            <h1>Your Name</h1>
+            <p>Aspiring Data Scientist with a Passion for the Entertainment Industry</p>
+        </div>
+    </header>
 
-  
+    <section id="about">
+        <div class="container">
+            <h2>About Me</h2>
+            <p>Hello, I'm Your Name, an aspiring data scientist with a passion for the entertainment industry.</p>
+        </div>
+    </section>
 
+    <section id="portfolio">
+        <div class="container">
+            <h2>My Work</h2>
+            <p>Here are some of the projects I've worked on:</p>
+            <ul>
+                <li><a href="#">Project 1</a></li>
+                <li><a href="#">Project 2</a></li>
+                <!-- Add more projects here -->
+            </ul>
+        </div>
+    </section>
+
+    <section id="contact">
+        <div class="container">
+            <h2>Contact Me</h2>
+            <p>You can reach me at <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2023 Your Name</p>
+    </footer>
 </body>
+</html>
