--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bob Sodikkhuajev - Portfolio</title>
+    <title>Your Name - Portfolio</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -43,18 +43,18 @@
 </head>
 <body>
     <header>
-        <h1>Bob Sodikkhuajev</h1>
-        <p>Aspiring Data Scientist with a Passion for the Entertainment Industry</p>
+        <h1>Your Name</h1>
+        <p>Your professional tagline or description</p>
         <div class="social-links">
-            <a href="https://www.linkedin.com/in/bsodikkhujaev/" target="_blank">LinkedIn</a>
-            <a href="https://github.com/BOBur3k" target="_blank">GitHub</a>
-            <a href="mailto:bsodikkhujaev@gmail.com">Email</a>
+            <a href="https://www.linkedin.com/in/yourusername/" target="_blank">LinkedIn</a>
+            <a href="https://github.com/yourusername" target="_blank">GitHub</a>
+            <a href="mailto:youremail@example.com">Email</a>
         </div>
     </header>
 
     <div class="container">
         <h2>About Me</h2>
-        <p>Hello, I'm Bob Sodikkhuajev, an aspiring data scientist with a passion for the entertainment industry.</p>
+        <p>Introduce yourself and describe your background, skills, and interests here.</p>
 
         <h2>My Work</h2>
         <p>Here are some of the projects I've worked on:</p>
@@ -65,7 +65,7 @@
         </ul>
 
         <h2>Contact Me</h2>
-        <p>You can reach me at <a href="mailto:bsodikkhuajev@gmail.com">bsodikkhujaev@gmail.com</a></p>
+        <p>You can reach me at <a href="mailto:youremail@example.com">youremail@example.com</a></p>
     </div>
 </body>
 </html>
