--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1>Hi. I'm <strong>Bob Sodikkhujaev</strong>.</h1>
+								<h1>Hi, I'm <strong>Bob Sodikkhujaev</strong>.</h1>
 							</header>
 							<p>I am a <strong>first-generation immigrant</strong> and a proud representative of the super minority community in the USA. My journey involves empowering students to unlock their potential, navigating the dynamic worlds of <strong>Digital Marketing</strong> and <strong>Data Science</strong>, and exploring the limitless possibilities of education and entertainment.</p>
 							<a href="#work" class="button large scrolly">Explore my world</a>
