--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 					<li><a href="#top">Top</a></li>
 					<li><a href="#work">About me</a></li>
 					<li><a href="#portfolio">Portfolio</a></li>
-					<li><a href="#contact">Contact</a></li>
+					<li><a href="#contact">Contact</a></li>	
+					<li><a href="#contact">Resume Request</a></li>
 				</ul>
 			</nav>
 
@@ -32,7 +33,7 @@
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1>Hi, I'm <strong>Bob Sodikkhujaev</strong>.</h1>
+								<h1>Hi. I'm <strong>Bob Sodikkhujaev</strong>.</h1>
 							</header>
 							<p>I am a <strong>first-generation immigrant</strong> and a proud representative of the super minority community in the USA. My journey involves empowering students to unlock their potential, navigating the dynamic worlds of <strong>Digital Marketing</strong> and <strong>Data Science</strong>, and exploring the limitless possibilities of education and entertainment.</p>
 							<a href="#work" class="button large scrolly">Explore my world</a>
@@ -41,42 +42,51 @@
 				</div>
 			</article>
 
-		<!-- Work -->
-			<article id="work" class="wrapper style2">
-				<div class="container">
-					<header>
-						<h2>Here's all the stuff I do.</h2>
-						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
-					</header>
-					<div class="row aln-center">
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon featured fa-comments"></span>
-								<h3>Consequat lorem</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-							</section>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon solid featured fa-camera-retro"></span>
-								<h3>Lorem dolor tempus</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-							</section>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon featured fa-thumbs-up"></span>
-								<h3>Feugiat posuere</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-							</section>
-						</div>
-					</div>
-					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
-					</footer>
-				</div>
-			</article>
+		<!-- Experience -->
+<article id="experience" class="wrapper style2">
+    <div class="container">
+        <header>
+            <h2>My Experience</h2>
+            <p>Explore my professional journey in various domains.</p>
+        </header>
+        <div class="row aln-center">
+            <div class="col-4 col-6-medium col-12-small">
+                <section class="box style1">
+                    <span class="icon featured fa-graduation-cap"></span>
+                    <h3>Empowering Students</h3>
+                    <p>My journey began at BMCC, where I served as a Math Tutor and Program Coordinator. In this role, I lit the academic spark within students, igniting their passion for learning.</p>
+                    <p>At Guttman Community College, I continued my mission as an Academic Advisor, achieving a remarkable 90% passing rate for students under my guidance. I provided unwavering support and mentorship, ensuring their academic success.</p>
+                    <p>My dedication to education also led me to City Tech, where I extended my academic guidance to over 50 students, helping them navigate the complexities of higher education.</p>
+                </section>
+            </div>
+
+            <div class="col-4 col-6-medium col-12-small">
+                <section class="box style1">
+                    <span class="icon solid featured fa-chart-line"></span>
+                    <h3>Digital Marketing</h3>
+                    <p>My marketing journey began with the iconic "Yang for NY" campaign, mastering the art of traditional marketing.</p>
+                    <p>Continuing at Stanford Startup, Schmooze Dating, I ventured into the world of app marketing, including influencer marketing to raise awareness and drive sign-ups.</p>
+                    <p>I further refined my marketing expertise at COOP Careers Apprenticeship and Kepler Academy, learning the ever-evolving trends of the digital marketing landscape.</p>
+                </section>
+            </div>
+
+            <div class="col-4 col-6-medium col-12-small">
+                <section class="box style1">
+                    <span class="icon featured fa-database"></span>
+                    <h3>Data Science</h3>
+                    <p>My Data Science journey at The Knowledge House hones my skills in Python, data analysis, machine learning, SQL, and data visualization.</p>
+                    <p>This 12-month program immerses me in real-world projects, providing hands-on experience and knowledge to excel in the data science field.</p>
+                    <p>Join me on this personal and transformative journey as I explore the data-driven world.</p>
+                </section>
+            </div>
+        </div>
+        <footer>
+            <p>Curious about my journey?</p>
+            <a href="#portfolio" class="button large scrolly">Learn More</a>
+        </footer>
+    </div>
+</article>
+
 
 		<!-- Portfolio -->
 			<article id="portfolio" class="wrapper style3">
@@ -136,71 +146,32 @@
 				</div>
 			</article>
 
-		<!-- Contact -->
-			<article id="contact" class="wrapper style4">
-				<div class="container medium">
-					<header>
-						<h2>Have me make stuff for you.</h2>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p>
-					</header>
-					<div class="row">
-						<div class="col-12">
-							<form method="post" action="#">
-								<div class="row">
-									<div class="col-6 col-12-small">
-										<input type="text" name="name" id="name" placeholder="Name" />
-									</div>
-									<div class="col-6 col-12-small">
-										<input type="text" name="email" id="email" placeholder="Email" />
-									</div>
-									<div class="col-12">
-										<input type="text" name="subject" id="subject" placeholder="Subject" />
-									</div>
-									<div class="col-12">
-										<textarea name="message" id="message" placeholder="Message"></textarea>
-									</div>
-									<div class="col-12">
-										<ul class="actions">
-											<li><input type="submit" value="Send Message" /></li>
-											<li><input type="reset" value="Clear Form" class="alt" /></li>
-										</ul>
-									</div>
-								</div>
-							</form>
-						</div>
-						<div class="col-12">
-							<hr />
-							<h3>Find me on ...</h3>
-							<ul class="social">
-								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
-								<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
-								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<!--
-								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-foursquare"><span>Foursquare</span></a></li>
-								<li><a href="#" class="icon brands fa-skype"><span>Skype</span></a></li>
-								<li><a href="#" class="icon brands fa-soundcloud"><span>Soundcloud</span></a></li>
-								<li><a href="#" class="icon brands fa-youtube"><span>YouTube</span></a></li>
-								<li><a href="#" class="icon brands fa-blogger"><span>Blogger</span></a></li>
-								<li><a href="#" class="icon brands fa-flickr"><span>Flickr</span></a></li>
-								<li><a href="#" class="icon brands fa-vimeo"><span>Vimeo</span></a></li>
-								-->
-							</ul>
-							<hr />
-						</div>
-					</div>
-					<footer>
-						<ul id="copyright">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</footer>
-				</div>
-			</article>
+<!-- Contact -->
+<article id="contact" class="wrapper style4">
+    <div class="container medium">
+        <header>
+            <h2>Connect with Me</h2>
+            <p>If you want to learn more, check out my other platforms, get access to my resume, or email me, the options are just a click away.</p>
+        </header>
+        <div class="row">
+            <div class="col-12">
+                <div style="display: flex; justify-content: center; gap: 20px;">
+                    <a href="YourLinkedInProfileLink" class="icon brands fa-linkedin fa-10x" target="_blank" title="LinkedIn"></a>
+                    <a href="YourGitHubLink" class="icon brands fa-github fa-10x" target="_blank" title="GitHub"></a>
+                    <a href="LinkToYourResume" class="icon solid fa-file fa-10x" target="_blank" title="Resume"></a>
+                    <a href="mailto:your@email.com" class="icon solid fa-envelope fa-10x" title="Email"></a>
+                </div>
+            </div>
+        </div>
+        <footer>
+            <ul id="copyright">
+                <li>&copy; Your Name. All rights reserved.</li>
+                <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            </ul>
+        </footer>
+    </div>
+</article>
+
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
