--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			</article>
 
 		<!-- Experience -->
-<article id="experience" class="wrapper style2">
+<article id="work" class="wrapper style2">
     <div class="container">
         <header>
             <h2>My Experience</h2>
