--- a/index.html
+++ b/index.html
@@ -46,40 +46,40 @@
 <article id="work" class="wrapper style2">
     <div class="container">
         <header>
-            <h2>My Experience</h2>
-            <p>Explore my professional journey in various domains.</p>
-        </header>
-        <div class="row aln-center">
-            <div class="col-4 col-6-medium col-12-small">
-                <section class="box style1">
-                    <span class="icon featured fa-graduation-cap"></span>
-                    <h3>Empowering Students</h3>
-                    <p>My journey began at BMCC, where I served as a Math Tutor and Program Coordinator. In this role, I lit the academic spark within students, igniting their passion for learning.</p>
-                    <p>At Guttman Community College, I continued my mission as an Academic Advisor, achieving a remarkable 90% passing rate for students under my guidance. I provided unwavering support and mentorship, ensuring their academic success.</p>
-                    <p>My dedication to education also led me to City Tech, where I extended my academic guidance to over 50 students, helping them navigate the complexities of higher education.</p>
-                </section>
-            </div>
+         <header>
+  <h2>My Experience</h2>
 
-            <div class="col-4 col-6-medium col-12-small">
-                <section class="box style1">
-                    <span class="icon solid featured fa-chart-line"></span>
-                    <h3>Digital Marketing</h3>
-                    <p>My marketing journey began with the iconic "Yang for NY" campaign, mastering the art of traditional marketing.</p>
-                    <p>Continuing at Stanford Startup, Schmooze Dating, I ventured into the world of app marketing, including influencer marketing to raise awareness and drive sign-ups.</p>
-                    <p>I further refined my marketing expertise at COOP Careers Apprenticeship and Kepler Academy, learning the ever-evolving trends of the digital marketing landscape.</p>
-                </section>
-            </div>
+  <p>I have experience empowering students, exploring digital marketing, and currently specializing in data science.</p>
 
-            <div class="col-4 col-6-medium col-12-small">
-                <section class="box style1">
-                    <span class="icon featured fa-database"></span>
-                    <h3>Data Science</h3>
-                    <p>My Data Science journey at The Knowledge House hones my skills in Python, data analysis, machine learning, SQL, and data visualization.</p>
-                    <p>This 12-month program immerses me in real-world projects, providing hands-on experience and knowledge to excel in the data science field.</p>
-                    <p>Join me on this personal and transformative journey as I explore the data-driven world.</p>
-                </section>
-            </div>
-        </div>
+</header>
+
+<div class="row aln-center">
+
+  <div class="col-4 col-6-medium col-12-small">
+    <section class="box style1">
+      <span class="icon featured fa-database"></span>
+      <h3>Data Science</h3>
+      <p>My Data Science journey at The Knowledge House...</p>
+    </section>
+  </div>
+
+  <div class="col-4 col-6-medium col-12-small">
+    <section class="box style1">
+      <span class="icon featured fa-graduation-cap"></span>
+      <h3>Higher Education</h3>
+      <p>At Guttman Community College, I continued my mission...</p> 
+    </section>
+  </div>
+
+  <div class="col-4 col-6-medium col-12-small">
+    <section class="box style1">
+      <span class="icon solid featured fa-chart-line"></span>
+      <h3>Digital Marketing</h3>
+      <p>My marketing journey began with the iconic "Yang for NY"...</p>
+    </section>
+  </div>
+
+</div>
         <footer>
             <p>Curious about my journey?</p>
             <a href="#portfolio" class="button large scrolly">Learn More</a>
