--- a/index.html
+++ b/index.html
@@ -64,9 +64,7 @@
                 <section class="box style1">
                  <span class="icon featured fa-graduation-cap"></span>
                     <h3>Empowering Students</h3>
-                    <p>My journey began at BMCC, where I served as a Math Tutor and Program Coordinator. In this role, I lit the academic spark within students, igniting their passion for learning.</p>
-                    <p>At Guttman Community College, I continued my mission as an Academic Advisor, achieving a remarkable 90% passing rate for students under my guidance. I provided unwavering support and mentorship, ensuring their academic success.</p>
-                    <p>My dedication to education also led me to City Tech, where I extended my academic guidance to over 50 students, helping them navigate the complexities of higher education.</p>
+                    <p>At BMCC, I served as a Math Tutor and Program Coordinator, sparking students' passion for learning. At Guttman College, as an Academic Advisor, I achieved a remarkable 90% student passing rate by providing steady support and mentorship. I also developed a new curriculum for the College Now class. I extended my guidance on academic success to over 50 students at City Tech, helping them navigate higher education. Through tutoring, advising, and coordinating, I have dedicated myself to empowering student achievement across multiple colleges.</p>
                 </section>   
             </div>
 
