--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
                 <section class="box style1">
                  <span class="icon featured fa-graduation-cap"></span>
                     <h3>Empowering Students</h3>
-                    <p>At BMCC, I served as a Math Tutor and Program Coordinator, sparking students' passion for learning. At Guttman College, as an Academic Advisor, I achieved a remarkable 90% student passing rate by providing steady support and mentorship. I also developed a new curriculum for the College Now class. I extended my guidance on academic success to over 50 students at City Tech, helping them navigate higher education. Through tutoring, advising, and coordinating, I have dedicated myself to empowering student achievement across multiple colleges.</p>
+                    <p>At BMCC, I served as a Math Tutor and Program Coordinator, sparking students' passion for learning. At Guttman College, as an Academic Advisor, I achieved a remarkable 90% student passing rate by providing steady support and mentorship. I also developed a new curriculum for the College Now class. I extended my guidance on academic success to over 50 students at City Tech, helping them navigate higher education. </p> 
+			<p> Through tutoring, advising, and coordinating, I have dedicated myself to empowering student achievement across multiple colleges.</p>
                 </section>   
             </div>
 
@@ -72,9 +73,8 @@
                 <section class="box style1">
                 <span class="icon solid featured fa-chart-line"></span>
                     <h3>Digital Marketing</h3>
-                    <p>My marketing journey began with the iconic "Yang for NY" campaign, mastering the art of traditional marketing.</p>
-                    <p>Continuing at Stanford Startup, Schmooze Dating, I ventured into the world of app marketing, including influencer marketing to raise awareness and drive sign-ups.</p>
-                    <p>I further refined my marketing expertise at COOP Careers Apprenticeship and Kepler Academy, learning the ever-evolving trends of the digital marketing landscape.</p>
+                    <p> My marketing journey began with the iconic "Yang for NY" campaign, where I mastered traditional marketing. At Stanford Startup and Schmooze Dating, I ventured into app marketing and influencer campaigns to boost awareness and sign-ups. I refined my expertise even further at COOP Careers and Kepler Academy, staying on top of the latest digital marketing trends. </p>
+			<p>Through political, startup, and academic marketing experience, I have developed versatile skills across traditional, app, and digital channels. My passion is driving growth and engagement through creative marketing strategies that connect with audiences. </p>
                 </section>
             </div>
         </div>
