--- a/index.html
+++ b/index.html
@@ -90,15 +90,15 @@
 			<article id="portfolio" class="wrapper style3">
 				<div class="container">
 					<header>
-						<h2>Here’s some stuff I made recently.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
+						<h2>Projects showcase! </h2>
+						<p>ntroduce you the project I am working on across my career and learning journey...</p>
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">Magna feugiat</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://github.com/BOBur3k/Shopping-Behavior.git" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+								<h3><a href="#">Data Science Project</a></h3>
+								<p>Shopping Behavior project for TKH</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
