--- a/index.html
+++ b/index.html
@@ -54,9 +54,8 @@
                 <section class="box style1">
                 <span class="icon featured fa-database"></span>
                     <h3>Data Science</h3>
-                    <p>My Data Science journey at The Knowledge House hones my skills in Python, data analysis, machine learning, SQL, and data visualization.</p>
-                    <p>This 12-month program immerses me in real-world projects, providing hands-on experience and knowledge to excel in the data science field.</p>
-                    <p>Join me on this personal and transformative journey as I explore the data-driven world.</p>
+                    <p>Through The Knowledge House’s 400+ hours of project-based data science curriculum, I’m honing essential skills in Python, statistical analysis, data visualization, and handling large datasets. I’m developing proficiency in SQL, Tableau, NumPy, pandas, scikit-learn, applying regression, clustering, ANOVA, and time series analyses to extract meaningful insights.<p>Join me on this personal and transformative journey as I explore the data-driven world.</p>
+			<p> By contributing to real-world projects and the deployment of a capstone MVP, I’m gaining hands-on expertise to excel in today's data-driven landscape. Join me on this intensive journey as I transform into an industry-ready data scientist.</p>
                 </section>  
             </div>
 
