--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="row aln-center">
             <div class="col-4 col-6-medium col-12-small">
                 <section class="box style1">
-                <span class="icon featured fa-database"></span>
+                <span class="image featured"><img src="images/pic001.jpg"></span>
                     <h3>Data Science</h3>
                     <p>Through The Knowledge House’s 400+ hours of project-based data science curriculum, I’m honing essential skills in Python, statistical analysis, data visualization, and handling large datasets. I’m developing proficiency in SQL, Tableau, NumPy, pandas, scikit-learn, applying regression, clustering, ANOVA, and time series analyses to extract meaningful insights. By contributing to real-world projects and the deployment of a capstone MVP, I’m gaining hands-on expertise to excel in today's data-driven landscape. </p>
 			<p> Join me on this intensive journey as I transform into an industry-ready data scientist. </p>
