--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
             <div class="col-4 col-6-medium col-12-small">
                 <section class="box style1">
-                 <span class="icon featured fa-graduation-cap"></span>
+                 <span class="image featured"><img src="images/pic002.jpg"></span>
                     <h3>Higher Education</h3>
                     <p>At BMCC, I served as a Math Tutor and Program Coordinator, sparking students' passion for learning. At Guttman College, as an Academic Advisor, I achieved a remarkable 90% student passing rate by providing steady support and mentorship. I also developed a new curriculum for the College Now class. I extended my guidance on academic success to over 50 students at City Tech, helping them navigate higher education. </p> 
 			<p> Through tutoring, advising, and coordinating, I have dedicated myself to empowering student achievement across multiple colleges.</p>
