--- a/index.html
+++ b/index.html
@@ -110,29 +110,29 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Data Science Project</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<h3><a href="https://github.com/BOBur3k/Project-1.git">Data Science Project</a></h3>
+								<p>The first project involving EDA, Cleaning, data transforemation and analysis</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">Data Science Project</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+								<h3><a href="#">Higher Education Project</a></h3>
+								<p>The Syllabus of the 12 week workshop fully developed by me for College Now program</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 								<h3><a href="#">Digital Marketing Project</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<p>Client project deck where I was overseeing the media planning operations</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
 								<h3><a href="#">Digital Marketing Porject</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<p>The Final marketing project at Kepler for our client Patrick Kids Foundation </p>
 							</article>
 						</div>
 					</div>
