--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://github.com/cshields164/end-of-phase1-project.git" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+								<a href="https://github.com/cshields164/end-of-phase1-project.git" class="image featured"><img src="images/pic_DS2.jpg" alt="" /></a>
 								<h3><a href="#">Data Science Project</a></h3>
 								<p>Group projcet involing the linear regressional model</p>
 							</article>
