--- a/index.html
+++ b/index.html
@@ -116,21 +116,21 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+								<a href="" class="image featured"><img src="images/pic004.jpg" alt="" /></a>
 								<h3><a href="#">Higher Education Project</a></h3>
 								<p>The Syllabus of the 12 week workshop fully developed by me for College Now program</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/pic005.jpg" alt="" /></a>
 								<h3><a href="#">Digital Marketing Project</a></h3>
 								<p>Client project deck where I was overseeing the media planning operations</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/pic006.png" alt="" /></a>
 								<h3><a href="#">Digital Marketing Porject</a></h3>
 								<p>The Final marketing project at Kepler for our client Patrick Kids Foundation </p>
 							</article>
