--- a/index.html
+++ b/index.html
@@ -93,13 +93,16 @@
 						<p>Join me as I highlight the hands-on, skill-building projects I've passionately brought to life across my career journey - undertakings fusing innovation with personal growth.</p>
 					</header>
 					<div class="row">
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="https://github.com/BOBur3k/Shopping-Behavior.git" class="image featured"><img src="images/pic_DS1.jpg" alt="" /></a>
-								<h3><a href="#">Data Science Project</a></h3>
-								<p>Shopping Behavior project for TKH</p>
-							</article>
-						</div>
+    <div class="col-4 col-6-medium col-12-small">
+        <article class="box style2">
+            <a href="https://github.com/BOBur3k/Shopping-Behavior.git" class="image featured">
+                <img src="images/pic_DS1.jpg" alt="Data Science Project Image" />
+            </a>
+            <h3><a href="#">Data Science Project</a></h3>
+            <p>Shopping Behavior project for TKH</p>
+        </article>
+    </div>
+
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="https://github.com/cshields164/end-of-phase1-project.git" class="image featured"><img src="images/pic_DS2.jpg" alt="" /></a>
