--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://github.com/cshields164/end-of-phase1-project.git" class="image featured"><img src="images/pic_008.png" alt="" /></a>
+								<a href="https://github.com/cshields164/end-of-phase1-project.git" class="image featured"><img src="images/pic008.png" alt="" /></a>
 								<h3><a href="#">Data Science Project</a></h3>
 								<p>Group projcet involing the linear regressional model</p>
 							</article>
