--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 						<div class="col-4 col-6-medium col-12-small">  
 							<article class="box style2">
 								<a href="https://github.com/BOBur3k/Shopping-Behavior.git" class="image featured"><img src="images/pic007.png" alt="" /></a> 
-								<h3><a href="#">Data Science Project</a></h3> 
+								<h3><a href="https://github.com/BOBur3k/Shopping-Behavior.git">Data Science Project</a></h3> 
 								<p>Shopping Behavior project for TKH</p> 
 							</article>
 						</div>
@@ -104,13 +104,13 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="https://github.com/cshields164/end-of-phase1-project.git" class="image featured"><img src="images/pic008.png" alt="" /></a>
-								<h3><a href="#">Data Science Project</a></h3>
+								<h3><a href="https://github.com/cshields164/end-of-phase1-project.git">Data Science Project</a></h3>
 								<p>Group projcet involing the linear regressional model</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+								<a href="https://github.com/BOBur3k/Project-1.git" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 								<h3><a href="https://github.com/BOBur3k/Project-1.git">Data Science Project</a></h3>
 								<p>The first project involving EDA, Cleaning, data transforemation and analysis</p>
 							</article>
