--- a/index.html
+++ b/index.html
@@ -154,16 +154,16 @@
         <div class="row">
             <div class="col-12">
                 <div style="display: flex; justify-content: center; gap: 20px;">
-                    <a href="YourLinkedInProfileLink" class="icon brands fa-linkedin fa-10x" target="_blank" title="LinkedIn"></a>
-                    <a href="YourGitHubLink" class="icon brands fa-github fa-10x" target="_blank" title="GitHub"></a>
+                    <a href="https://www.linkedin.com/in/bsodikkhujaev/" class="icon brands fa-linkedin fa-10x" target="_blank" title="LinkedIn"></a>
+                    <a href="https://github.com/BOBur3k" class="icon brands fa-github fa-10x" target="_blank" title="GitHub"></a>
                     <a href="LinkToYourResume" class="icon solid fa-file fa-10x" target="_blank" title="Resume"></a>
-                    <a href="mailto:your@email.com" class="icon solid fa-envelope fa-10x" title="Email"></a>
+                    <a href="mailto:bsodikkhujaev@gmail.com" class="icon solid fa-envelope fa-10x" title="Email"></a>
                 </div>
             </div>
         </div>
         <footer>
             <ul id="copyright">
-                <li>&copy; Your Name. All rights reserved.</li>
+                <li>&copy; SMF group. All rights reserved.</li>
                 <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
             </ul>
         </footer>
