--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<li><a href="#top">Top</a></li>
 					<li><a href="#work">About me</a></li>
 					<li><a href="#portfolio">Portfolio</a></li>
-					<li><a href="#contact">Contact</a></li>	
+					<li><a href="assets/resume01">Contact</a></li>	
 					<li><a href="#contact">Resume Request</a></li>
 				</ul>
 			</nav>
@@ -156,7 +156,7 @@
                 <div style="display: flex; justify-content: center; gap: 20px;">
                     <a href="https://www.linkedin.com/in/bsodikkhujaev/" class="icon brands fa-linkedin fa-10x" target="_blank" title="LinkedIn"></a>
                     <a href="https://github.com/BOBur3k" class="icon brands fa-github fa-10x" target="_blank" title="GitHub"></a>
-                    <a href="LinkToYourResume" class="icon solid fa-file fa-10x" target="_blank" title="Resume"></a>
+                    <a href="assets/resume01" class="icon solid fa-file fa-10x" target="_blank" title="Resume"></a>
                     <a href="mailto:bsodikkhujaev@gmail.com" class="icon solid fa-envelope fa-10x" title="Email"></a>
                 </div>
             </div>
